Fix divs that are covering the whole viewport. Make swiping only the image itself work.

--- a/app/styles/yagallery.scss
+++ b/app/styles/yagallery.scss
@@ -25,19 +25,30 @@ body {
     color: white;
     font-weight: bold;
     /*border-radius: 10px;*/
+
+    /* From http://stackoverflow.com/questions/12906789/preventing-an-image-from-being-draggable-or-selectable-without-using-js */
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none;
+    user-drag: none;
 }
 
 #thumbnail-container {
-    position: absolute;
+    //position: absolute;
     bottom: 10%;
     height: 120px;
     width: 100%;
     background-color: red;
+    overflow: auto;
+    white-space: nowrap;
 }
 
 #thumbnails {
     // display: inline-block;
     // margin: 0 auto;
+    //overflow: scroll;
 }
 
 div.thumbnail {
@@ -77,15 +88,6 @@ img.thumbnail {
     box-shadow: 5px 5px 5px black;
 }
 
-#wait-pane-master {
-    position: fixed;
-    left: 0%;
-    top: 0%;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-}
-
 #wait-pane-container {
     position: fixed;
     left: 50%;
@@ -98,14 +100,6 @@ img.thumbnail {
     top: -50%;
     font-weight: bold;
     color: black;
-}
-
-#make-fullscreen-master {
-    position: fixed;
-    left: 0%;
-    top: 0%;
-    width: 100%;
-    height: 100%;
 }
 
 #make-fullscreen-container {
